# plover_dictionary_builder

./: MANIFEST.in  README.md  README.rst  pyuic.json  setup.cfg  setup.py
dictionary_builder/: dictionary_builder.py  dictionary_builder.ui
plover_dictionary_builder/: dictionary_builder.py  dictionary_builder.ui
plover_dictionary_builder/resources/: resources.qrc
