[metadata]
name = plover_dictionary_builder
version = 0.1.0
description = Build up a steno dictionary from text content
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/plover_dictionary_builder
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev3
packages =
	plover_dictionary_builder

[options.entry_points]
plover.gui.qt.tool =
	dictionary_builder = plover_dictionary_builder.dictionary_builder:DictionaryBuilder

# vim: commentstring=#\ %s list
